@@ -10,6 +10,7 @@ import lotr.common.LOTREventHandler;
 import lotr.common.LOTRFaction;
 import lotr.common.LOTRLevelData;
 import lotr.common.entity.item.LOTREntityBanner;
+import lotr.common.entity.item.LOTREntityBannerWall;
 import net.minecraft.block.Block;
 import net.minecraft.client.renderer.texture.IIconRegister;
 import net.minecraft.creativetab.CreativeTabs;
@@ -18,6 +19,7 @@ import net.minecraft.init.Blocks;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.util.ChatComponentTranslation;
+import net.minecraft.util.Direction;
 import net.minecraft.util.IIcon;
 import net.minecraft.util.MathHelper;
 import net.minecraft.world.World;
@@ -97,82 +99,88 @@ public class LOTRItemBanner extends Item
     }
 	
 	@Override
-	public boolean onItemUse(ItemStack itemstack, EntityPlayer entityplayer, World world, int i, int j, int k, int l, float f, float f1, float f2)
+	public boolean onItemUse(ItemStack itemstack, EntityPlayer entityplayer, World world, int i, int j, int k, int side, float f, float f1, float f2)
 	{
-        Block block = world.getBlock(i, j, k);
-        if (block == Blocks.snow_layer)
-        {
-            l = 1;
-        }
-        else if (block != Blocks.vine && block != Blocks.tallgrass && block != Blocks.deadbush && !block.isReplaceable(world, i, j, k))
-        {
-            if (l == 0)
-            {
-                j--;
-            }
-            if (l == 1)
-            {
-                j++;
-            }
-            if (l == 2)
-            {
-                k--;
-            }
-            if (l == 3)
-            {
-                k++;
-            }
-            if (l == 4)
-            {
-                i--;
-            }
-            if (l == 5)
-            {
-                i++;
-            }
-        }
-		if (!entityplayer.canPlayerEdit(i, j, k, l, itemstack))
-        {
-            return false;
-        }
-		if (world.getBlock(i, j - 1, k).isSideSolid(world, i, j - 1, k, ForgeDirection.UP))
+		if (side == 0)
 		{
-			if (!entityplayer.capabilities.isCreativeMode && world.getBlock(i, j - 1, k) == Blocks.gold_block)
+			return false;
+		}
+		else if (side == 1)
+		{
+			if (!world.getBlock(i, j, k).isReplaceable(world, i, j, k))
 			{
-				if (LOTRLevelData.getAlignment(entityplayer, getFaction(itemstack)) < 1)
-				{
-					if (!world.isRemote)
-					{
-						LOTRAlignmentValues.notifyAlignmentNotHighEnough(entityplayer, 1, getFaction(itemstack));
-					}
-					return false;
-				}
-				else
-				{
-					if (!world.isRemote && LOTREventHandler.isProtectedByBanner(world, i, j, k, entityplayer, false, LOTREntityBanner.PROTECTION_RANGE * 2))
-					{
-						entityplayer.addChatMessage(new ChatComponentTranslation("chat.lotr.protectedLandBanner"));
-						return false;
-					}
-				}
+				j++;
 			}
 			
-			if (!world.isRemote)
+			if (!entityplayer.canPlayerEdit(i, j, k, side, itemstack))
+	        {
+	            return false;
+	        }
+			
+			if (world.getBlock(i, j - 1, k).isSideSolid(world, i, j - 1, k, ForgeDirection.UP))
 			{
-				LOTREntityBanner banner = new LOTREntityBanner(world);
-				banner.setLocationAndAngles((double)i + 0.5F, (double)j, (double)k + 0.5F, 90F * (MathHelper.floor_double((double)(entityplayer.rotationYaw * 4F / 360F) + 0.5D) & 3), 0F);
-				if (world.checkNoEntityCollision(banner.boundingBox) && world.getCollidingBoundingBoxes(banner, banner.boundingBox).size() == 0 && !world.isAnyLiquid(banner.boundingBox))
+				if (!entityplayer.capabilities.isCreativeMode && world.getBlock(i, j - 1, k) == Blocks.gold_block)
 				{
-					banner.setBannerType(itemstack.getItemDamage());
-					banner.allowedPlayers[0] = entityplayer.getUniqueID();
-					world.spawnEntityInWorld(banner);
-					world.playSoundAtEntity(banner, Blocks.planks.stepSound.func_150496_b(), (Blocks.planks.stepSound.getVolume() + 1F) / 2F, Blocks.planks.stepSound.getPitch() * 0.8F);
-					itemstack.stackSize--;
-					return true;
+					if (LOTRLevelData.getAlignment(entityplayer, getFaction(itemstack)) < 1)
+					{
+						if (!world.isRemote)
+						{
+							LOTRAlignmentValues.notifyAlignmentNotHighEnough(entityplayer, 1, getFaction(itemstack));
+						}
+						return false;
+					}
+					else
+					{
+						if (!world.isRemote && LOTREventHandler.isProtectedByBanner(world, i, j, k, entityplayer, false, LOTREntityBanner.PROTECTION_RANGE * 2))
+						{
+							entityplayer.addChatMessage(new ChatComponentTranslation("chat.lotr.protectedLandBanner"));
+							return false;
+						}
+					}
 				}
-				banner.setDead();
+				
+				if (!world.isRemote)
+				{
+					LOTREntityBanner banner = new LOTREntityBanner(world);
+					banner.setLocationAndAngles((double)i + 0.5F, (double)j, (double)k + 0.5F, 90F * (MathHelper.floor_double((double)(entityplayer.rotationYaw * 4F / 360F) + 0.5D) & 3), 0F);
+					if (world.checkNoEntityCollision(banner.boundingBox) && world.getCollidingBoundingBoxes(banner, banner.boundingBox).size() == 0 && !world.isAnyLiquid(banner.boundingBox))
+					{
+						banner.setBannerType(itemstack.getItemDamage());
+						banner.allowedPlayers[0] = entityplayer.getUniqueID();
+						world.spawnEntityInWorld(banner);
+						world.playSoundAtEntity(banner, Blocks.planks.stepSound.func_150496_b(), (Blocks.planks.stepSound.getVolume() + 1F) / 2F, Blocks.planks.stepSound.getPitch() * 0.8F);
+						itemstack.stackSize--;
+						return true;
+					}
+					banner.setDead();
+				}
 			}
 		}
+		else
+		{
+			if (!entityplayer.canPlayerEdit(i, j, k, side, itemstack))
+            {
+                return false;
+            }
+
+			int l = Direction.facingToDirection[side];
+			LOTREntityBannerWall banner = new LOTREntityBannerWall(world, i, j, k, l);
+            if (world.checkNoEntityCollision(banner.boundingBox) && !world.isAnyLiquid(banner.boundingBox) && banner.onValidSurface())
+            {
+				banner.setBannerType(itemstack.getItemDamage());
+                if (!world.isRemote)
+                {
+                    world.spawnEntityInWorld(banner);
+                }
+				world.playSoundAtEntity(banner, Blocks.planks.stepSound.func_150496_b(), (Blocks.planks.stepSound.getVolume() + 1F) / 2F, Blocks.planks.stepSound.getPitch() * 0.8F);
+                itemstack.stackSize--;
+				return true;
+            }
+			banner.setDead();
+			return false;
+    
+		}
+		
 		return false;
 	}
 	
