@@ -621,18 +621,6 @@ item.lotr:banner.8.name=Banner of Angmar
 item.lotr:banner.9.name=Banner of Near Harad
 item.lotr:banner.10.name=Banner of the High Elves
 item.lotr:banner.11.name=Banner of the Blue Mountains
-item.lotr:bannerWall.0.name=Wall Banner of Gondor
-item.lotr:bannerWall.1.name=Wall Banner of Rohan
-item.lotr:bannerWall.2.name=Wall Banner of Mordor
-item.lotr:bannerWall.3.name=Wall Banner of Lothlórien
-item.lotr:bannerWall.4.name=Wall Banner of the Woodland Realm
-item.lotr:bannerWall.5.name=Wall Banner of Dunland
-item.lotr:bannerWall.6.name=Wall Banner of the Uruk-hai
-item.lotr:bannerWall.7.name=Wall Banner of Durin's Folk
-item.lotr:bannerWall.8.name=Wall Banner of Angmar
-item.lotr:bannerWall.9.name=Wall Banner of Near Harad
-item.lotr:bannerWall.10.name=Wall Banner of the High Elves
-item.lotr:bannerWall.11.name=Wall Banner of the Blue Mountains
 item.lotr:sulfurMatch.name=Sulfur Match
 item.lotr:swordAngmar.name=Angmar Sword
 item.lotr:daggerAngmar.name=Angmar Dagger
