@@ -1,11 +1,14 @@
 Public Beta 19
 
-+ Added protective functions for a banner placed on a gold block: prevention of enemy mob spawns, and protection against enemy players breaking, placing, or using blocks, within a 32-block cubic radius
++ Added a 32-block cubic radius of protection around a banner placed on a gold block, which serves two purposes:
+1) Enemy mobs are prevented from spawning
+2) In multiplayer, terrain is protected from being edited or interacted with, either against enemies of the banner's faction, or with a whitelist
+
 + Added more available custom waypoints as a reward for earning Middle-earth achievements
 + Added bandits
 + Added Ranger Watchtowers
 + Added several new Fangorn plants and new Ent-draught types
-+ Added a better Ent-draught system: rain now fills jars in any biome, jars can also be filled from water containers, and Fangorn plants added to a jar of water turns it into draught
++ Added a better Ent-draught system: rain now fills jars in any biome, jars can also be filled from water containers, and Fangorn plants added to a jar of water turn it into draught
 + Added the ability to summon hired Huorns through the use of golden ent draught
 + Added eating and drinking AI to many more NPCs
 + Added a speed boost effect to Miruvor and Orc Draught
@@ -20,6 +23,7 @@ Public Beta 19
 * Increased the health of elves and dwarves
 * Banner bearers now carry banners in the left hand so they do not disappear in battle
 * Banners now break instead of falling when the block below is removed
+* Banners can now be placed on walls, and the 'Wall Banner' items have been removed for simplicity
 * Near Haradrim now defend themselves with daggers
 * Dunlending Bartenders now trade at Dunland alignment 0
 * Ent-draughts are now poisonous to enemies of Fangorn
